# Grade_Report

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run-clang-format.sh
.github/workflows/: ci.yml
cmake/modules/: CodeCoverage.cmake
include/: Evaluation.hpp  Interaction.hpp  Statistics.hpp  Subject.hpp  Type.hpp
src/: CMakeLists.txt  Evaluation.cpp  Interaction.cpp  Main.cpp  Statistics.cpp  Subject.cpp
tests/: CMakeLists.txt  test_prueba.cpp  ut_subject.cpp
